# Android2Screen

./: CMakeLists.txt  Makefile  main.cpp  run_at_device.sh
app/: CMakeLists.txt  Makefile  cmake_install.cmake
app/src/: main.c  main.cpp
hagl/: CMakeLists - Copy.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
hagl-hal/: CMakeLists.txt  Makefile  cmake_install.cmake
hagl-hal/include/: hagl_hal.h
hagl-hal/src/: hagl_hal.c
hagl/include/: hagl.h  rgb888.h
hagl/src/: hagl.c  rgb888.c
remote-access/: CMakeLists.txt  Makefile  cmake_install.cmake
remote-access/include/: PacketHolder.hpp  packet_parser.h  remote_access.h  wrapper.h
remote-access/src/: PacketHolder.cpp  cdc_dev.c  packet_parser.cpp  wrapper.c
tools/: param  run_compiled.bat  stop_android_graphic_access.bat  usb_gadget.sh  zImage
